src/objects/TeamForce_Sandbox__c.object
<CustomObject>
    <description>Used to track the various development environments we are using as part of our development processes</description>
    <fields>
        <fullName>CommunicationDate__c</fullName>
        <formula>Release__r.CommunicationDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Communication Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DevelopmentFreezeDate__c</fullName>
        <formula>Release__r.DevelopmentFreezeDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Development Freeze Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReleaseDate__c</fullName>
        <formula>Release__r.ReleaseDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Release_Status__c</fullName>
        <description>Used to set the certainty level of release the sandbox will be included to</description>
        <inlineHelpText>Not Planned = Yet no clue on when to release
Planned = Clear target to meet this release but not yet confirmed it is possible
Confirmed = If nothing unforeseen is coming it will go with the added release</inlineHelpText>
        <label>Release Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Planned</fullName>
                </value>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Set the intended release for this sandbox - add the plans if existing even if not yet 100% confirmed. Manage certainty of making the release with the release status field</description>
        <inlineHelpText>Set the intended release for this sandbox - add the plans if existing even if not yet 100% confirmed. Manage certainty of making the release with the release status field</inlineHelpText>
        <label>Release</label>
        <referenceTo>TeamForce_Release__c</referenceTo>
        <relationshipLabel>Sandboxes</relationshipLabel>
        <relationshipName>TeamForce_Sandboxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SandboxDescription__c</fullName>
        <description>Add a short description of the purpose and intentioins for the sandbox. Good to include objects/features that will be touched in this environment.</description>
        <inlineHelpText>Add a short description of the purpose and intentioins for the sandbox. Good to include objects/features that will be touched in this environment.</inlineHelpText>
        <label>Sandbox Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sandbox_Status__c</fullName>
        <label>Sandbox Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>InActive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StagingStartDate__c</fullName>
        <formula>Release__r.StagingStartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Staging Start Date</label>
        <type>Date</type>
    </fields>
    <label>TeamForce Sandbox</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DevelopmentFreezeDate__c</columns>
        <columns>Release__c</columns>
        <columns>ReleaseDate__c</columns>
        <columns>Release_Status__c</columns>
        <columns>Sandbox_Status__c</columns>
        <columns>StagingStartDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Sandboxes</fullName>
        <columns>NAME</columns>
        <columns>SandboxDescription__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Release__c</columns>
        <columns>Release_Status__c</columns>
        <columns>ReleaseDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sandbox_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All Active Sandboxes</label>
    </listViews>
    <listViews>
        <fullName>My_Sandboxes</fullName>
        <columns>NAME</columns>
        <columns>SandboxDescription__c</columns>
        <columns>Release__c</columns>
        <columns>Release_Status__c</columns>
        <columns>DevelopmentFreezeDate__c</columns>
        <columns>ReleaseDate__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My Sandboxes</label>
    </listViews>
    <nameField>
        <label>TeamForce Sandbox Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TeamForce Sandboxes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>